--- a/src/main/resources/templates/planner.html
+++ b/src/main/resources/templates/planner.html
@@ -10,6 +10,7 @@
 
   <link rel="stylesheet" th:href="@{/jquery-ui.min.css}" href="jquery-ui.min.css">
   <link rel="stylesheet" th:href="@{/style.min.css}" href="style.min.css">
+  <link rel="stylesheet" th:href="@{/dialog-theme.css}" href="dialog-theme.css">
 
   <script th:src="@{/jquery-1.11.1.min.js}" src="jquery-1.11.1.min.js"></script>
   <script th:src="@{/placeholders.min.js}" src="placeholders.min.js"></script>
