학점 박스 고정값 반영 및 안내문 위치 조정

--- a/src/main/resources/templates/planner-content.html
+++ b/src/main/resources/templates/planner-content.html
@@ -203,16 +203,16 @@
             <tbody style="font-size:11px;">
               <tr>
                 <th scope="row">이수학기</th><!-- 이수학기 -->
-                <td class="ta_c">4</td>
+                <td class="ta_c">1</td>
               </tr>
 
               <tr>
                 <th scope="row">학기최소학점</th><!-- 최소학점 -->
-                <td class="ta_c">12</td>
+                <td class="ta_c">19</td>
               </tr>
               <tr>
                 <th scope="row">학기최대학점(A)</th><!-- 학기 최대학점(A) -->
-                <td class="ta_c">21</td>
+                <td class="ta_c">19</td>
               </tr>
               <tr>
                 <th scope="row">학기이월학점(B)</th><!-- 학기 이월학점(B) -->
@@ -221,7 +221,7 @@
               </tr>
               <tr>
                 <th scope="row">성적초과학점(C)</th><!-- 성적 초과학점(C) -->
-                <td class="ta_c">3</td>
+                <td class="ta_c">0</td>
               </tr>
 
               <tr>
@@ -230,7 +230,7 @@
               </tr>
               <tr>
                 <th scope="row">신청가능학점<br>(A+B+C+D)</th><!-- 신청가능학점  --> <!-- 20240711 신청가능학점 -->
-                <td class="ta_c">24</td>
+                <td class="ta_c">19</td>
               </tr>
 
 
@@ -258,7 +258,10 @@
           <div class="section_tbl">
             <!-- 섹션 타이틀 -->
             <div class="section_mid_tit">
-              <p class="ta_r">더블클릭하면 해당 강좌가 수강신청 됩니다.</p><!-- 더블클릭하면 해당 강좌가 수강신청 됩니다. -->
+              <div style="margin: 6px 0 10px; padding: 7px 10px; border: 1px solid #dbe3f2; background: #f7f9fc; color: #6b7488; font-size: 11px; line-height: 1.6;">
+                <p>더블클릭하면 해당 강좌가 수강신청 됩니다.</p>
+                <p>마감된 강좌는 잔여석에 한해 11시, 12시, 18시, 23시에 수강신청 가능</p>
+              </div>
             </div>
             <!-- 섹션 타이틀 -->
             <br><br>
@@ -327,11 +330,6 @@
                 </tbody>
               </table>
             </div>
-          </div>
-          <div class="section_mid_tit">
-            <br><br>
-            <br>
-            <p class="ta_r">마감된 강좌는 잔여석에 한해 11시, 12시, 18시, 23시에 수강신청 가능</p><!-- 더블클릭하면 해당 강좌가 수강신청 됩니다. -->
           </div>
         </div>
         <!-- //수강계획도우미 -->
