--- a/src/main/resources/templates/planner-content.html
+++ b/src/main/resources/templates/planner-content.html
@@ -1,6 +1,7 @@
 <th:block th:fragment="plannerContent" xmlns:th="http://www.thymeleaf.org">
   <script th:inline="javascript" type="text/javascript">
     var flashMessage = /*[[${message}]]*/ "";
+    var scrollKey = "plannerScrollY";
 
     function selectSubj() {
       if ($("ul> .ui-tabs-active").index() == 1) {
@@ -9,6 +10,7 @@
     }
 
     function submitPost(url, params) {
+      sessionStorage.setItem(scrollKey, String(window.scrollY || window.pageYOffset || 0));
       var elements = "";
       $.each(params, function (key, value) {
         elements += "<input type='hidden' name='" + key + "' value='" + value + "'>";
@@ -82,6 +84,12 @@
     }
 
     $(document).ready(function () {
+      var savedScrollY = sessionStorage.getItem(scrollKey);
+      if (savedScrollY !== null) {
+        window.scrollTo(0, parseInt(savedScrollY, 10) || 0);
+        sessionStorage.removeItem(scrollKey);
+      }
+
       if (flashMessage) {
         $.alert(flashMessage, selectSubj);
       }
