--- a/src/main/resources/templates/planner.html
+++ b/src/main/resources/templates/planner.html
@@ -53,12 +53,15 @@
 
 <div id="wrap">
   <div id="header">
-    <div class="top_sec" style="height: 70px;">
+    <div class="top_sec" style="height: 70px; position: relative;">
       <a th:href="@{/}" href="/">
         <h1 style="background: none; border: none;">
           <img th:src="@{/top_logo.png}" src="top_logo.png" alt="DKU COURSE REGISTRATION SYSTEM" style="width: 150px; position: absolute; top: 0px; left: 20px;">
         </h1>
       </a>
+      <div style="position: absolute; right: 20px; top: 9px; color: #e8eefc; font-size: 12px; font-weight: 700;">
+        Made by. 컴퓨터공학과 강대운 · 김준수 · 서준영
+      </div>
 
       <div class="util_box" style="display: none;">
         <div class="my_name">
@@ -71,9 +74,6 @@
 
   <div id="contents" style="min-height: 938px; width: 100% !important; margin: 0 !important; padding: 0 !important;">
     <div class="cont" style="width: 100% !important; margin: 0 !important; float: none !important;">
-      <div class="section_top_tit" style="display: block;">
-        <h3 class="tit_now tit_school">수강신청</h3>
-      </div>
       <div style="margin: 0 0 14px; padding: 10px 14px; border: 1px solid #f0b300; background: #fff8dc; color: #5f4800; font-size: 13px; line-height: 1.6;">
         [중요 안내] 본 사이트는 개인 연습용 비공식 데모입니다. 실제 단국대학교 및 공식 학사시스템과 무관하며, 실제 수강신청/학적 처리 기능을 제공하지 않습니다.
       </div>
