--- a/src/main/resources/templates/timetable-popup.html
+++ b/src/main/resources/templates/timetable-popup.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>시간표 조회</title>
+  <title>단국대수강신청연습사이트 - 시간표 조회</title>
   <style>
     body {
       margin: 0;
