--- a/src/main/resources/templates/timetable-popup.html
+++ b/src/main/resources/templates/timetable-popup.html
@@ -32,8 +32,8 @@
 </head>
 <body>
 <div class="container">
-  <h1>시간표 조회(데모)</h1>
-  <p>현재 프로젝트는 원본 수강신청 UI를 로컬에서 재현한 데모 모드입니다.</p>
+  <h1>시간표 조회(연습용 사이트)</h1>
+  <p>현재 프로젝트는 원본 수강신청 UI를 로컬에서 재현한 연습용 사이트입니다.</p>
   <p>실제 학사 데이터 연동 기능은 백엔드 구현 후 연결할 수 있습니다.</p>
 </div>
 </body>
