Add GTM container snippet across all templates

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -13,6 +13,13 @@
   <script th:src="@{/jquery-ui.min.js}" src="jquery-ui.min.js"></script>
   <script th:src="@{/common.js}" src="common.js"></script>
   <script th:src="@{/style.min.js}" src="style.min.js"></script>
+  <!-- Google Tag Manager -->
+  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+  'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+  })(window,document,'script','dataLayer','GTM-5WWRQ7L6');</script>
+  <!-- End Google Tag Manager -->
   <style>
     .login_frm .login-title-logo {
       margin: 0 0 12px;
@@ -108,6 +115,10 @@
   </script>
 </head>
 <body id="body" class="login">
+  <!-- Google Tag Manager (noscript) -->
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5WWRQ7L6"
+  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
   <div class="wrap">
     <div id="header">
       <div class="util_box"></div>
