--- a/src/main/resources/templates/timetable-popup.html
+++ b/src/main/resources/templates/timetable-popup.html
@@ -5,6 +5,13 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>단국대수강신청연습사이트 - 시간표 조회</title>
+  <!-- Google Tag Manager -->
+  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+  'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+  })(window,document,'script','dataLayer','GTM-5WWRQ7L6');</script>
+  <!-- End Google Tag Manager -->
   <style>
     body {
       margin: 0;
@@ -31,6 +38,10 @@
   </style>
 </head>
 <body>
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5WWRQ7L6"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
 <div class="container">
   <h1>시간표 조회(연습용 사이트)</h1>
   <p>현재 프로젝트는 원본 수강신청 UI를 로컬에서 재현한 연습용 사이트입니다.</p>
