--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -112,12 +112,18 @@
         var mod = getServerAlignedSecond() % windowSeconds;
         var $status = $("#loginWindowStatus");
 
-        if (mod < effectiveAllowSeconds) {
-          var remain = effectiveAllowSeconds - mod;
+        if (mod < allowSeconds) {
+          var remain = allowSeconds - mod;
           $status
             .removeClass("wait")
             .addClass("open")
             .text("접속 가능합니다. (" + remain + "초 후 마감)");
+        } else if (mod < effectiveAllowSeconds) {
+          var fakeNextOpen = 10 - (mod - allowSeconds);
+          $status
+            .removeClass("open")
+            .addClass("wait")
+            .text("다음 오픈까지 " + fakeNextOpen + "초");
         } else {
           var nextOpen = windowSeconds - mod;
           $status
